Mysql Configuration Added - New Use Case

--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,6 @@
         <module>VistaConsola</module>
         <module>Inicio</module>
         <module>VistaEscritorio</module>
+        <module>SistemaBiblioteca</module>
     </modules>
 </project>
